--- a/vercel.json
+++ b/vercel.json
@@ -8,30 +8,11 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/src/app.js"
-    },
-    {
-      "src": "/admin/(.*)",
-      "dest": "/src/app.js"
-    },
-    {
-      "src": "/chat/(.*)",
-      "dest": "/src/app.js"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/src/app.js"
+      "dest": "src/app.js"
     }
   ],
   "env": {
-    "API_KEY": "@api-key",
-    "DATABASE_URL": "@database-url",
-    "JWT_SECRET": "@jwt-secret"
-  },
-  "functions": {
-    "src/app.js": {
-      "maxDuration": 30
-    }
+    "NODE_ENV": "production"
   }
 }
