--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-API_KEY=YOUR_GEMINI_API_KEY
-DATABASE_URL=YOUR_DATABASE_URL
+API_KEY=your_gemini_api_key_here
+DATABASE_URL=your_mongodb_connection_string_here
 PORT=3000
-WEBSITE_URL=YOUR_WEBSITE_URL
-ADMIN_EMAIL=YOUR_ADMIN_EMAIL
-ADMIN_PASSWORD=YOUR_ADMIN_PASSWORD
+JWT_SECRET=your_jwt_secret_here
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=secure_password_here
