--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,18 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "src/app.js"
+    },
+    {
+      "src": "/admin/(.*)",
+      "dest": "src/app.js"
+    },
+    {
+      "src": "/chat/(.*)",
+      "dest": "src/app.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "src/app.js"
     }
