Prepare for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,10 @@
   ],
   "env": {
     "NODE_ENV": "production"
+  },
+  "functions": {
+    "src/app.js": {
+      "maxDuration": 30
+    }
   }
 }
