--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_KEY=your_gemini_api_key_here
+MISTRAL_API_KEY=your_mistral_api_key_here
 DATABASE_URL=your_mongodb_connection_string_here
 PORT=3000
 JWT_SECRET=your_jwt_secret_here
